# RDP_Gateway

./: .gitignore  AGENTS.md  README.cn.md  README.md  config.example.toml  pyproject.toml  uv.toml
scripts/: build_macos_app.sh  gen_cert.sh  macos_gui_entry.py  run.sh  trust_cert_macos.sh
src/rdp_gateway/: __init__.py  auth.py  cert_utils.py  cli.py  config.py  config_file.py  gui.py  http.py  launch_agent.py  rdg_ws.py  relay.py  server.py  socks5.py  websocket.py
tests/: test_auth.py  test_cert_utils.py  test_config.py  test_config_file.py  test_i18n.py  test_launch_agent.py  test_rdg_ws.py  test_relay.py  test_server.py  test_socks5.py  test_websocket.py
